# noema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluations.md  index.md
examples/: quickstart.py  sample_report.html
examples/sample_bundle/: README.md
src/noema/: cli.py
src/noema/artifacts/: __init__.py  bundles.py
src/noema/configs/: defaults.yaml
src/noema/core/: __init__.py  attention.py  controller.py  loop.py  memory.py  processes.py  types.py  workspace.py
src/noema/core/backends/: base.py  dummy.py  openai_backend.py
src/noema/examples/: __init__.py  crewai_example.py  interruption_demo.py  langgraph_example.py  llamaindex_example.py  quickstart.py
src/noema/instruments/: __init__.py  metacog.py  narrative.py  probes.py
src/noema/interop/: __init__.py  crewai_adapter.py  langgraph_adapter.py  llamaindex_adapter.py
src/noema/io/: __init__.py  actuators.py  sensors.py
src/noema/mcp/: __init__.py  client.py  server.py
src/noema/observe/: __init__.py  logging.py  otel.py
src/noema/reporting/: __init__.py  html_report.py
src/noema/tasks/: __init__.py  ablations.py  evaluations.py  microworlds.py
src/pydantic/: __init__.py
src/yaml/: __init__.py
tests/: test_adapters.py  test_benchmarks.py  test_loop.py  test_metacog.py
ui/: README.md  app.py
ui/static/: app.ts  index.html
